mission1/k8s/board-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: board-api
  namespace: board
spec:
  selector:
    app: board-api
  ports:
    - port: 8080
