mission1/k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: board
spec:
  selector:
    app: board-postgres
  ports:
    - port: 5432
