mission1/k8s/board-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-ingress
  namespace: board
  annotations: 
    traefik.ingress.kubernetes.io/router.middlewares: board-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - board.local
      secretName: board-tls-secret
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: board-fe
                port:
                  number: 8081
